--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -1,30 +1,37 @@
 name: Release Helm Charts
+
 on:
   push:
     branches:
-      - fix/helm-release-workflow
+      - main
     paths:
       - "charts/**"
+
 permissions:
   contents: write
   packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      # Step 1: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
       
+      # Step 2: Set up Helm
       - name: Set up Helm
         uses: azure/setup-helm@v4
         with:
           version: v3.14.0
-      
+
+      # Step 3: Set up chart-testing
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.6.1
       
+      # Step 4: Detect changed charts
       - name: Detect changed charts
         id: changed-charts
         run: |
@@ -38,6 +45,7 @@ jobs:
             echo "No charts changed"
           fi
       
+      # Step 5: Add repositories from chart dependencies automatically
       - name: Add Repos from Charts Automatically
         if: steps.changed-charts.outputs.changed == 'true'
         run: |
@@ -53,6 +61,7 @@ jobs:
           done
           helm repo update
       
+      # Step 6: Build chart dependencies
       - name: Build chart dependencies
         if: steps.changed-charts.outputs.changed == 'true'
         run: |
@@ -62,13 +71,8 @@ jobs:
               helm dependency build "$dir"
             fi
           done
-      
-      - name: Configure Git
-        if: steps.changed-charts.outputs.changed == 'true'
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      
+
+      # Step 7: Run chart-releaser to package the charts
       - name: Run chart-releaser
         if: steps.changed-charts.outputs.changed == 'true'
         uses: helm/chart-releaser-action@v1.6.0
@@ -76,8 +80,17 @@ jobs:
           charts_dir: charts
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Create landing page
+
+      # Step 8: Copy .tgz files to the page directory (for GitHub Pages)
+      - name: Copy .tgz files to page directory
+        if: steps.changed-charts.outputs.changed == 'true'
+        run: |
+          mkdir -p ./page
+          cp ./charts/*.tgz ./page/
+          ls -la ./page  # Verify that .tgz files are copied to the page directory
+
+      # Step 9: Create the landing page (index.html)
+      - name: Create landing page (index.html)
         run: |
           mkdir -p ./page
           cat > ./page/index.html << 'EOF'
@@ -89,12 +102,22 @@ jobs:
           <body>
               <h1>Helm Charts Repository</h1>
               <p>Add this repository:</p>
-              <pre>helm repo add ai-helm https://adorsys-gis-github.io/ai-helm/</pre>
+              <pre>helm repo add ai-helm https://adorsys-gis.github.io/ai-helm/</pre>
               <p><a href="index.yaml">View index.yaml</a></p>
           </body>
           </html>
           EOF
-      
+
+      # Step 10: Commit and push the changes to the gh-pages branch
+      - name: Commit and push to gh-pages branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add ./page
+          git commit -m "Add .tgz charts and index.html"
+          git push origin gh-pages
+
+      # Step 11: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
