Deploy Helm charts and index.yaml to GitHub Pages
- Pushed .tgz files and index.yaml to gh-pages branch
- Updated landing page (index.html) for Helm chart repository

--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -3,7 +3,7 @@ name: Release Helm Charts
 on:
   push:
     branches:
-      - main
+      - fix/helm-release-workflow
     paths:
       - "charts/**"
 
