--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -2,7 +2,7 @@ name: Release Helm Charts
 on:
   push:
     branches:
-      - main
+      - fix-helm-release-workflow
     paths:
       - "charts/**"
 permissions:
