--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -2,7 +2,7 @@ name: Release Helm Charts
 on:
   push:
     branches:
-      - fix-helm-release-workflow
+      - "**"
     paths:
       - "charts/**"
 permissions:
@@ -16,29 +16,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
       - name: Set up Helm
         uses: azure/setup-helm@v4
         with:
           version: v3.14.0
-      
-      - name: Detect changed charts
-        id: changed-charts
-        run: |
-          # Get list of changed files in charts directory
-          changed_files=$(git diff --name-only HEAD~1 HEAD -- charts/ || echo "")
-          
-          if [[ -n "$changed_files" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-            echo "Changed files in charts:"
-            echo "$changed_files"
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-            echo "No charts changed"
-          fi
-      
       - name: Add Repos from Charts Automatically
-        if: steps.changed-charts.outputs.changed == 'true'
         run: |
           repos=$(find charts -name 'Chart.yaml' -exec yq e '.dependencies[].repository' {} \; | sort -u)
           for repo in $repos; do
@@ -51,9 +33,7 @@ jobs:
             helm repo add "$name" "$repo"
           done
           helm repo update
-      
       - name: Build chart dependencies
-        if: steps.changed-charts.outputs.changed == 'true'
         run: |
           for dir in charts/*; do
             if [ -f "$dir/Chart.yaml" ]; then
@@ -61,43 +41,15 @@ jobs:
               helm dependency build "$dir"
             fi
           done
-      
       - name: Configure Git
-        if: steps.changed-charts.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      
       - name: Run chart-releaser
-        if: steps.changed-charts.outputs.changed == 'true'
+        if: github.ref == 'refs/heads/fix-helm-release-workflow'
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
+          skip_existing: true
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Create landing page
-        run: |
-          mkdir -p ./page
-          cat > ./page/index.html << 'EOF'
-          <!DOCTYPE html>
-          <html>
-          <head>
-              <title>Helm Charts</title>
-          </head>
-          <body>
-              <h1>Helm Charts Repository</h1>
-              <p>Add this repository:</p>
-              <pre>helm repo add ai-helm https://adorsys-gis-github.io/ai-helm/</pre>
-              <p><a href="index.yaml">View index.yaml</a></p>
-          </body>
-          </html>
-          EOF
-      
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./page
-          publish_branch: gh-pages
-          keep_files: true
