--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -1,16 +1,13 @@
 name: Release Helm Charts
-
 on:
   push:
     branches:
       - "**"
     paths:
       - "charts/**"
-
 permissions:
   contents: write
   packages: write
-
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -19,12 +16,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Set up Helm
         uses: azure/setup-helm@v4
         with:
           version: v3.14.0
-
       - name: Add Repos from Charts Automatically
         run: |
           repos=$(find charts -name 'Chart.yaml' -exec yq e '.dependencies[].repository' {} \; | sort -u)
@@ -38,7 +33,6 @@ jobs:
             helm repo add "$name" "$repo"
           done
           helm repo update
-
       - name: Build chart dependencies
         run: |
           for dir in charts/*; do
@@ -47,16 +41,15 @@ jobs:
               helm dependency build "$dir"
             fi
           done
-
       - name: Configure Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
       - name: Run chart-releaser
         if: github.ref == 'refs/heads/main'
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
+          skip_existing: true
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
