--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -58,14 +58,14 @@ jobs:
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
-          charts: ${{ steps.find-charts.outputs.changed_charts }}
+          skip_existing: true
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Deploy to GitHub Pages
-      #   if: github.ref == 'refs/heads/deploy-to-github-pages'
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: ./docs
-      #     publish_branch: gh-pages
+      - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/deploy-to-github-pages'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
+          publish_branch: gh-pages
