fix: correct ClientTrafficPolicy template and values structure
- Fixed ClientTrafficPolicy template to use proper targetRefs array structure
- Corrected enableProxyProtocol to be boolean instead of nested object
- Removed invalid 'connection' field not supported in ClientTrafficPolicy API
- Updated values.yaml to match template expectations with proper nesting
- Set dynamic namespace using .Release.Namespace with default fallback
- Simplified template by removing unnecessary common.tplvalues.render calls

The template now generates valid ClientTrafficPolicy manifests that comply with
Envoy Gateway v1.4+ API specifications, resolving previous installation failures
and template evaluation errors.

--- a/charts/lightbridge-authz-umbrella/values.yaml
+++ b/charts/lightbridge-authz-umbrella/values.yaml
@@ -24,3 +24,28 @@ lightbridge-config:
     pullPolicy: IfNotPresent
   configData:
     exampleKey: exampleValue  # override default config if needed
+  
+  tlsPolicies:
+    google:
+      enabled: true
+      validation:
+        certSecret: "google-tls-cert" 
+    openai:
+      enabled: true
+      validation:
+        certSecret: "openai-tls-cert"
+  providers:
+    lightbridge-authz:
+      providers:
+        lightbridge-authz: true
+  clientTraffic:
+    enabled: true
+    targetRef:
+      group: gateway.networking.k8s.io
+      kind: Gateway
+      name: eg  # Replace with your actual Gateway name
+    enableProxyProtocol: true
+    tcpKeepalive:
+      idleTime: 10s
+      interval: 5s
+      probes: 3
