chore: updated helm release workflow to release helm charts on fix-helm-release-workflow branch

--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -66,13 +66,13 @@ jobs:
           done
 
       - name: Configure Git
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/fix-helm-release-workflow'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Run chart-releaser
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/fix-helm-release-workflow'
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
