fix(helm): resolve config,probes,sub-chart issues

--- a/charts/lightbridge-authz-umbrella/Chart.yaml
+++ b/charts/lightbridge-authz-umbrella/Chart.yaml
@@ -12,3 +12,4 @@ dependencies:
   - name: lightbridge-config
     version: 0.1.0
     repository: "file://./charts/lightbridge-config"
+    condition: lightbridge-config.enabled
