--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,8 @@ go.work.sum
 
 # env file
 .env
-<<<<<<< HEAD
-=======
-# charts/*/charts/
+charts/*/charts/
 */*/values.schema.json
->>>>>>> e4a784f (Refactor code structure for improved readability and maintainability)
-
 # Editor/IDE
 # .idea/
 # .vscode/
