Ignore parent chart

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ go.work.sum
 
 # env file
 .env
-# charts/*/charts/
+charts/*/charts/
+charts/lightbridge-authz-umbrella/
 */*/values.schema.json
 
 # Editor/IDE
