feat: add lightbridge-authz-0.1.0

--- a/charts/lightbridge-authz-umbrella/Chart.yaml
+++ b/charts/lightbridge-authz-umbrella/Chart.yaml
@@ -8,8 +8,8 @@ appVersion: "1.0.0"
 dependencies:
   - name: lightbridge-authz
     version: 0.1.0
-    repository: "https://adorsys-gis.github.io/ai-helm/"
+    repository: "file://../lightbridge-authz"
   - name: lightbridge-config
     version: 0.1.0
-    repository: "https://adorsys-gis.github.io/ai-helm/"
+    repository: "file://../lightbridge-config"
     condition: lightbridge-config.enabled
