--- a/charts/lightbridge-authz-umbrella/values.yaml
+++ b/charts/lightbridge-authz-umbrella/values.yaml
@@ -6,6 +6,7 @@ global:
 # Sub-chart overrides
 lightbridge-authz:
   enabled: true
+  fullnameOverride: "lightbridge-authz"
   replicaCount: 1
   image:
     repository: registry072/lightbridge-authz
