feat(authz): Improve secret management
Makes secret creation optional and allows the chart to use an existing, externally managed secret.

- The  value now controls secret creation (default: false).
- The  value specifies the name of the secret to use.
- The deployment is updated to use the specified secret name.

--- a/charts/lightbridge-authz/values.yaml
+++ b/charts/lightbridge-authz/values.yaml
@@ -140,6 +140,7 @@ config:
     jwks_url: ""
 
 secret:
-  enabled: true
+  create: false
+  name: ""
   databaseUrl: "postgres://user:password@host:port/dbname"
   jwksUrl: "https://your-auth-server.com/certs"
