--- a/charts/lightbridge-authz/templates/secret.yaml
+++ b/charts/lightbridge-authz/templates/secret.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.secret.enabled -}}
+{{- if .Values.secret.create -}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "lightbridge-authz.fullname" . }}-secret
+  name: {{ .Values.secret.name | default (printf "%s-secret" (include "lightbridge-authz.fullname" .)) }}
   labels:
     {{- include "lightbridge-authz.labels" . | nindent 4 }}
 stringData:
