feat(umbrella): Update authz dependency and configuration
- Updates the lightbridge-authz chart to a new version that uses external secrets.
- Updates the container image to ghcr.io/franck-sorel/lightbridge-authz.
- Configures the umbrella chart to use an externally managed secret for the authz service.

--- a/charts/lightbridge-authz-umbrella/values.yaml
+++ b/charts/lightbridge-authz-umbrella/values.yaml
@@ -9,23 +9,22 @@ lightbridge-authz:
   fullnameOverride: "lightbridge-authz"
   replicaCount: 1
   image:
-    repository: registry072/lightbridge-authz
+    repository: ghcr.io/franck-sorel/lightbridge-authz
     tag: latest
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
     port: 80
   secret:
-    enabled: true
-    databaseUrl: "postgres://postgres:postgres@my-postgres-postgresql.default.svc.cluster.local:5432/lightbridge_authz"
-    jwksUrl: "https://your-auth-server.com/certs"
+    create: false
+    name: lightbridge-authz-prod-secrets
 
 
 lightbridge-config:
   enabled: false
   replicaCount: 1
   image:
-    repository: registry072/lightbridge-authz
+    repository: ghcr.io/franck-sorel/lightbridge-authz
     tag: latest
     pullPolicy: IfNotPresent
   configData:
