feat: Address PR feedback and align with best practices
This commit addresses feedback from the recent pull request review and improves the overall quality and consistency of the Helm charts.

The following changes have been made:

- **:**
  - Removed  and  from  to improve chart reusability and rely on Helm's default naming conventions.

- **:**
  - Removed the redundant  and  files. The functionality is now handled by the  chart, reducing boilerplate code.

- **:**
  - Aligned the model backends in  with the defined providers, correcting a routing issue where Gemini models were
  pointing to a non-existent backend.
  - Fixed a critical bug in  where the template was iterating over the wrong map, resulting in empty
   and disabling TLS validation. The template now correctly populates the , ensuring that TLS validation is
  applied as intended.

--- a/charts/lightbridge-config/templates/backend-security-policy.yaml
+++ b/charts/lightbridge-config/templates/backend-security-policy.yaml
@@ -6,6 +6,7 @@ kind: BackendSecurityPolicy
 metadata:
   name: {{ $name }}
   namespace: {{ include "common.names.namespace" $ }}
+  labels: {{- include "common.labels.standard" $ | nindent 4 }}
 spec:
   targetRefs:
     - group: aigateway.envoyproxy.io
