--- a/charts/lightbridge-config/values.yaml
+++ b/charts/lightbridge-config/values.yaml
@@ -1,3 +1,5 @@
+fullnameOverride: ""
+
 gatewayRef:
   group: gateway.networking.k8s.io
   kind: Gateway
@@ -67,9 +69,9 @@ tlsPolicies:
 models:
   - { name: gpt-5,              backend: openai-team-a }
   - { name: gpt-5-mini,         backend: openai-team-a }
-  - { name: gemini-2.5-pro,     backend: google-main }
-  - { name: gemini-2.5-flash,   backend: google-main }
-  - { name: gemini-2.0-flash,   backend: google-main }
+  - { name: gemini-2.5-pro,     backend: google-team }
+  - { name: gemini-2.5-flash,   backend: google-team }
+  - { name: gemini-2.0-flash,   backend: google-team }
 
 # per-tier allow-lists and budgets (fill numbers you want)
 # "*" means "all models" for that map
