--- a/charts/lightbridge-config/templates/backend-tls-policy.yaml
+++ b/charts/lightbridge-config/templates/backend-tls-policy.yaml
@@ -6,17 +6,16 @@ kind: BackendTLSPolicy
 metadata:
   name: {{ $tls_name }}-tls
   namespace: {{ include "common.names.namespace" $ }}
+  labels: {{- include "common.labels.standard" $ | nindent 4 }}
 spec:
   targetRefs:
-    {{- range $name, $p := $.Values.providers }}
     {{- range $p_name, $p_value := .providers }}
-    {{ if and $p_value (eq $name $p_name) }}
+    {{- if $p_value }}
     - group: 'gateway.envoyproxy.io'
       kind: Backend
-      name: {{ $name }}
-    {{ end }}
-    {{ end }}
-    {{ end }}
+      name: {{ $p_name }}
+    {{- end }}
+    {{- end }}
   validation:
     {{ include "common.tplvalues.render" ( dict "value" .validation "context" $ ) | nindent 4 }}
 ---
