--- a/charts/lightbridge-config/templates/ext-auth.yaml
+++ b/charts/lightbridge-config/templates/ext-auth.yaml
@@ -4,8 +4,9 @@
 apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: SecurityPolicy
 metadata:
-  name: ext-auth-example
+  name: {{ include "common.names.fullname" $ }}-ext-auth
   namespace: {{ include "common.names.namespace" $ }}
+  labels: {{- include "common.labels.standard" $ | nindent 4 }}
 spec:
   targetRefs:
     - group: gateway.networking.k8s.io
