feat(lightbridge-config): Refactor and improve chart
This commit introduces a number of improvements to the `lightbridge-config` chart, making it more robust, maintainable, and aligned with best practices.

The following changes have been made:

- **Refactored Rate Limiting:**
  - Combined `rl-requests.yaml` and `rl-tokens.yaml` into a single, generic `ratelimit.yaml` template. This reduces code duplication and makes the rate limiting configuration more modular.
  - Updated `values.yaml` with a new `rateLimitPolicies` structure to support the new generic template.

- **Improved `backends.yaml`:**
  - Fixed a bug where an `AIServiceBackend` could be created without a corresponding `Backend`, leading to a dangling reference.
  - Consolidated redundant `if .endpoints` conditions to make the template cleaner and more efficient.

- **Simplified `guard-securitypolicy.yaml`:**
  - Refactored the template to improve readability and remove redundant header checks, making it more efficient and easier to understand.

--- a/charts/lightbridge-config/templates/guard-securitypolicy.yaml
+++ b/charts/lightbridge-config/templates/guard-securitypolicy.yaml
@@ -17,16 +17,10 @@ spec:
             {{- if eq (include "allowed" (dict "tier" $tierName "model" $model.name "context" $) ) "true" }}
           - when:
               - headers:
-                  - name: {{ include "H.tier" $ }}
+                  - name: {{ $.Values.headers.tier }}
                     value: {{ $tierName }}
-                  - name: {{ include "H.model" $ }}
+                  - name: {{ $.Values.headers.model }}
                     value: {{ $model.name }}
-            {{- if $.Values.headers.tenant }}
-                  - name: {{ include "H.tenant" $ }}
-                    present: true
-            {{- end }}
-                  - name: {{ include "H.user" $ }}
-                    present: true
             {{- end }}
           {{- end }}
         {{- end }}
