--- a/charts/lightbridge-config/values.yaml
+++ b/charts/lightbridge-config/values.yaml
@@ -75,6 +75,25 @@ models:
 
 # per-tier allow-lists and budgets (fill numbers you want)
 # "*" means "all models" for that map
+rateLimitPolicies:
+  requests:
+    type: requests
+    perMin: reqPerMin
+    perMonth: reqPerMonth
+  tokens:
+    type: tokens
+    perMin: tokensPerMin
+    perMonth: tokensPerMonth
+    cost:
+      request:
+        from: Number
+        number: 0
+      response:
+        from: Metadata
+        metadata:
+          namespace: io.envoy.ai_gateway
+          key: llm_total_token
+
 tiers:
   free:
     allow:
@@ -86,6 +105,9 @@ tiers:
     tokensPerMin:
       gemini-2.0-flash: 20000
       gemini-2.5-flash: 15000
+    reqPerMonth:
+      gemini-2.0-flash: 200000
+      gemini-2.5-flash: 150000
     tokensPerMonth:
       gemini-2.0-flash: 200000
       gemini-2.5-flash: 150000
@@ -100,6 +122,9 @@ tiers:
     tokensPerMin:
       gemini-2.0-flash: 40000
       gemini-2.5-flash: 30000
+    reqPerMonth:
+      gemini-2.0-flash: 800000
+      gemini-2.5-flash: 600000
     tokensPerMonth:
       gemini-2.0-flash: 800000
       gemini-2.5-flash: 600000
@@ -123,6 +148,12 @@ tiers:
       gemini-2.5-pro: 80000
       gemini-2.5-flash: 60000
       gemini-2.0-flash: 80000
+    reqPerMonth:
+      gpt-5: 2000000
+      gpt-5-mini: 3000000
+      gemini-2.5-pro: 2000000
+      gemini-2.5-flash: 3000000
+      gemini-2.0-flash: 4000000
     tokensPerMonth:
       gpt-5: 2000000
       gpt-5-mini: 3000000
@@ -134,6 +165,7 @@ tiers:
     allow: [ "*" ]
     reqPerMin: { "*": 600 }
     tokensPerMin: { "*": 350000 }
+    reqPerMonth: { "*": 20000000 }
     tokensPerMonth: { "*": 20000000 }
 
 # local burst limiter (per Envoy pod)
