--- a/charts/lightbridge-authz/values.yaml
+++ b/charts/lightbridge-authz/values.yaml
@@ -1,164 +1,42 @@
-# Default values for lightbridge-authz.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
-
-
-
-# This is for the secretes for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-imagePullSecrets: []
-# This is to override the chart name.
-nameOverride: ""
-fullnameOverride: ""
-
-# This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-# This is for setting Kubernetes Annotations to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
-podAnnotations: {}
-# This is for setting Kubernetes Labels to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-
-
-service:
-  main:
-    enabled: true
-    type: ClusterIP
-    controller: main
-    ports:
-      http:
-        enabled: true
-        port: 3000
-        targetPort: http
-        protocol: TCP
 
 controllers:
   main:
-    enabled: true
-    type: deployment
-    replicas: 1
     containers:
       main:
-        enabled: true
         image:
-          repository: "nginx"
-          tag: "latest"
-          pullPolicy: "IfNotPresent"
+          repository: ghcr.io/franck-sorel/lightbridge-authz
+          tag: latest
+        env:
+          DATABASE_URL:
+            secret:
+              name: lightbridge-authz-prod-secrets
+              key: DATABASE_URL
+          JWKS_URL:
+            secret:
+              name: lightbridge-authz-prod-secrets
+              key: JWKS_URL
+        probes:
+          liveness:
+            enabled: true
+            spec:
+              httpGet:
+                path: /health
+                port: 80
+          readiness:
+            enabled: true
+            spec:
+              httpGet:
+                path: /health
+                port: 80
+          startup:
+            enabled: true
+            spec:
+              httpGet:
+                path: /health
+                port: 80
 
-
-
-ingress:
+service:
   main:
-    enabled: false
-    className: ""
-    annotations: {}
-    hosts:
-      - host: chart-example.local
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            service:
-              name: main
-              port: http
-    tls: []
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-# This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-livenessProbe:
-  httpGet:
-    path: /
-    port: 3000
-readinessProbe:
-  httpGet:
-    path: /
-    port: 3000
-
-
-
-autoscaling:
-  main:
-    enabled: false
-    minReplicas: 1
-    maxReplicas: 100
-    targetCPUUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-config:
-  enabled: true
-  server:
-    rest:
-      address: "0.0.0.0"
-      port: 3000
-    grpc:
-      address: "0.0.0.0"
-      port: 3001
-  logging:
-    level: "info"
-  database:
-    url: ""
-    pool_size: 10
-  oauth2:
-    jwks_url: ""
-
-secret:
-  create: false
-  name: ""
-  databaseUrl: "postgres://user:password@host:port/dbname"
-  jwksUrl: "https://your-auth-server.com/certs"
-
-rbac:
-  enabled: false
+    ports:
+      http:
+        port: 80
