--- a/charts/lightbridge-authz/templates/tests/test-connection.yaml
+++ b/charts/lightbridge-authz/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "common.names.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "common.names.fullname" . }}:{{ index .Values "app-template" "service" "main" "ports" "http" "port" }}']
   restartPolicy: Never
