feat(lightbridge-config): add targetRef to ClientTrafficPolicy
This commit adds a `targetRef` to the `clientTraffic` section in the
`values.yaml` file. This ensures that the `ClientTrafficPolicy` is applied
to a specific gateway, allowing client traffic settings—such as
`enableProxyProtocol` and `tcpKeepalive`—to be correctly enforced.

Without this change, the `ClientTrafficPolicy` would be created but not
associated with any gateway, rendering it ineffective.

--- a/charts/lightbridge-config/values.yaml
+++ b/charts/lightbridge-config/values.yaml
@@ -212,6 +212,10 @@ retry:
 clientTraffic:
   enabled: true
   enableProxyProtocol: true
+  targetRef:
+    group: gateway.networking.k8s.io
+    kind: Gateway
+    name: public-gw
   tcpKeepalive:
     idleTime: 20m
     interval: 60s
