feat(umbrella): align with refactored subcharts and local dependencies
This commit updates the `lightbridge-authz-umbrella` chart to correctly use
the refactored `lightbridge-authz` and `lightbridge-config` subcharts as
local dependencies.

Key changes include:

- **Local Dependency Resolution:**
  - Updated `Chart.yaml` and `Chart.lock` to reference subcharts via local
    file paths (`file://../<chart-name>`), ensuring the umbrella chart uses
    the latest local versions instead of remote ones.

- **Values Overrides for `lightbridge-authz`:**
  - Reorganized `values.yaml` overrides to align with the new
    `app-template`-based structure.
  - Added `enabled: true` and `app-template.enabled: true` to ensure proper
    rendering of both the subchart and its dependency.

- **Values Cleanup for `lightbridge-config`:**
  - Removed obsolete and unused overrides, resulting in a cleaner and more
    maintainable `values.yaml`.

These updates ensure consistent deployment across the umbrella chart and its
refactored subcharts.

--- a/charts/lightbridge-authz-umbrella/values.yaml
+++ b/charts/lightbridge-authz-umbrella/values.yaml
@@ -5,29 +5,24 @@ global:
 
 # Sub-chart overrides
 lightbridge-authz:
-  replicaCount: 1
-  image:
-    repository: ghcr.io/franck-sorel/lightbridge-authz
-    tag: latest
-    pullPolicy: IfNotPresent
+  enabled: true
+  app-template:
+    enabled: true
+  controllers:
+    main:
+      containers:
+        main:
+          image:
+            repository: ghcr.io/franck-sorel/lightbridge-authz
+            tag: latest
   service:
-    type: ClusterIP
-    port: 80
-  secret:
-    create: false
-    name: lightbridge-authz-prod-secrets
-
+    main:
+      ports:
+        http:
+          port: 80
 
 lightbridge-config:
   enabled: false
-  replicaCount: 1
-  image:
-    repository: ghcr.io/franck-sorel/lightbridge-authz
-    tag: latest
-    pullPolicy: IfNotPresent
-  configData:
-    exampleKey: exampleValue  # override default config if needed
-  
   tlsPolicies:
     google:
       enabled: true
