docs(helm): improve chart descriptions for authz, config, and umbrella
This commit updates the descriptions in the `Chart.yaml` files for the
`lightbridge-authz-umbrella`, `lightbridge-authz`, and `lightbridge-config`
charts.

The new descriptions provide a more detailed explanation of the purpose and
function of each chart, improving the overall clarity and maintainability of
the Helm release.

- **lightbridge-authz-umbrella**: Now clearly described as the main entry point
  for deploying the entire Lightbridge authorization system.
- **lightbridge-authz**: Description updated to highlight its role as the core
  authorization service.
- **lightbridge-config**: Description updated to explain its responsibility for
  managing authorization policies, networking, and security configurations.

--- a/charts/lightbridge-authz-umbrella/Chart.yaml
+++ b/charts/lightbridge-authz-umbrella/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: lightbridge-authz-umbrella
-description: A Helm chart for Lightbridge Authorization Umbrella
+description: This is an umbrella chart and acts as the main entry point for deploying the entire Lightbridge authorization system. It doesn’t have any templates of its own but instead manages the deployment of the lightbridge-authz and lightbridge-config charts as its dependencies. This chart is used to define the global configurations and to enable or disable the sub-charts as needed, providing a single point of control for the entire application stack.
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
