--- a/charts/lightbridge-authz/Chart.yaml
+++ b/charts/lightbridge-authz/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: lightbridge-authz
-description: A Helm chart for Kubernetes
+description: This chart deploys the core Lightbridge authorization service, which is responsible for handling all the authorization requests. It includes an init container that generates the necessary configuration from a template and secrets, and the main container runs the authorization service itself, which exposes both a REST and a gRPC interface. This service is responsible for validating the incoming requests against the policies defined in the lightbridge-config chart and for providing the authorization decisions to the service mesh or API gateway.
 
 # A chart can be either an 'application' or a 'library' chart.
 #
