--- a/charts/litellm-dashboard/Chart.yaml
+++ b/charts/litellm-dashboard/Chart.yaml
@@ -9,4 +9,4 @@ appVersion: v0.0.1
 dependencies:
   - name: app-template
     version: 4.3.0
-    repository: "https://bjw-s-labs.github.io/helm-charts/"
+    repository: "https://bjw-s-labs.github.io/helm-charts"
