fix: update chart version to 0.1.0 and adjust chart-releaser condition

--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -54,7 +54,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Run chart-releaser
-        if: github.ref == 'refs/heads/feat/deploy-helm-chart-for-litellm-dashboard'
+        if: github.ref == 'refs/heads/main'
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
