chore: remove Keycloak configuration files from lightbridge-authz chart

--- a/charts/lightbridge-authz/Chart.yaml
+++ b/charts/lightbridge-authz/Chart.yaml
@@ -10,7 +10,7 @@ appVersion: "1.16.0"
 
 dependencies:
   - name: app-template
-    version: "*"
+    version: "4.4.0"
     repository: https://bjw-s-labs.github.io/helm-charts
 
 
