--- a/charts/models/templates/aigatewayroute.yaml
+++ b/charts/models/templates/aigatewayroute.yaml
@@ -18,7 +18,7 @@ kind: AIGatewayRoute
 metadata:
   name: {{ $routeName }}
 spec:
-  targetRefs:
+  parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
       name: ai-gateway
