update(): remove bj-ws

--- a/charts/models/Chart.yaml
+++ b/charts/models/Chart.yaml
@@ -23,7 +23,7 @@ version: 0.1.1
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
 
-dependencies:
-  - name: app-template
-    version: 4.3.0
-    repository: "https://bjw-s-labs.github.io/helm-charts"
+# dependencies:
+#   - name: app-template
+#     version: 4.3.0
+#     repository: "https://bjw-s-labs.github.io/helm-charts"
