feat: updated configuration to not include harcoded secrets  use secrets already present on cluster through referencing in values.yaml

--- a/charts/models/templates/backendsecuritypolicy.yaml
+++ b/charts/models/templates/backendsecuritypolicy.yaml
@@ -12,5 +12,5 @@ spec:
   type: APIKey
   apiKey:
     secretRef:
-      name: {{ $backendName }}-apikey
+      name: {{ $backendConfig.apiKeySecret }}
 {{- end }}
