--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -6,7 +6,7 @@ backends:
     fqdn:
       hostname: api.ai.kivoyo.com
       port: 443
-    apiKeySecret: sk-7GbI_Dt-n0Plh5DLL4gFTg
+    apiKeySecret: litellm-openai-api-key
     tlsHostname: api.ai.kivoyo.com
   fw-primary:
     resourceName: fw-backend-svc
@@ -15,7 +15,7 @@ backends:
     fqdn:
       hostname: api.fireworks.ai
       port: 443
-    apiKeySecret: fw_6rqLvqUUn77CKbzEAEKikx
+    apiKeySecret: litellm-fireworks-key
     tlsHostname: api.fireworks.ai
   fallback-node:
     resourceName: global-fallback-svc
@@ -24,7 +24,7 @@ backends:
     fqdn:
       hostname: api.ai.kivoyo.com
       port: 443
-    apiKeySecret: sk-7GbI_Dt-n0Plh5DLL4gFTg
+    apiKeySecret: litellm-gemini-api-key
     tlsHostname: api.ai.kivoyo.com
 
 # The base blueprint for routes
