ref(): separate concerns

--- a/charts/models/templates/aigatewayroute.yaml
+++ b/charts/models/templates/aigatewayroute.yaml
@@ -21,7 +21,7 @@ spec:
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
-      name: ai-gateway
+      name: {{ $.Values.gatewayRef.name }}
   rules:
     - matches:
         - headers:
