chore(): per user per model rate limiting

--- a/charts/models/templates/ratelimitpolicy.yaml
+++ b/charts/models/templates/ratelimitpolicy.yaml
@@ -18,8 +18,8 @@ metadata:
   {{- end }}
 spec:
   targetRef:
-    group: aigateway.envoyproxy.io
-    kind: AIGatewayRoute
+    group: gateway.networking.k8s.io
+    kind: HTTPRoute
     name: {{ $routeName }}
   limits:
     {{- if $routeConfig.rateLimit }}
