--- a/charts/models/templates/backendsecuritypolicy.yaml
+++ b/charts/models/templates/backendsecuritypolicy.yaml
@@ -12,5 +12,5 @@ spec:
   type: APIKey
   apiKey:
     secretRef:
-      name: {{ $backendConfig.apiKeySecret }}
+      name: {{ $backendConfig.apiKeySecretRef.name }}
 {{- end }}
